# task-local

./: Cargo.toml  Readme.md
task-global/: Cargo.toml
task-global-macros/: Cargo.toml
task-global-macros/src/: lib.rs
task-global/src/: lib.rs
task-global/tests/: derive.rs
task-local/: Cargo.toml
task-local-macros/: Cargo.toml
task-local-macros/src/: lib.rs
task-local/src/: lib.rs
task-local/tests/: derive.rs
