[package]
name = "task-local"
version = "0.1.0"
edition = "2021"

[features]
default = ["futures", "macros"]

futures = ["dep:futures"]
macros = ["dep:task-local-macros"]

[dependencies]
futures = { version = "0.3.24", default-features = false, optional = true }
pin-project = "1.0.12"
task-local-macros = { version = "0.1.0", path = "../task-local-macros", optional = true }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "macros"] }
